add JdbcAdapter locator